# execution-market

./: .deploy_tag  .dockerignore  .easignore  .env.cloud  .env.docker.example  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARTICLE_X_COMPETITION_V12.md  ARTICLE_X_COMPETITION_V14.md  ARTICLE_X_COMPETITION_V15.md  ARTICLE_X_COMPETITION_V18.md  ARTICLE_X_COMPETITION_V19.md  ARTICLE_X_COMPETITION_V2.md  ARTICLE_X_COMPETITION_V21.md  ARTICLE_X_COMPETITION_V23.md  ARTICLE_X_COMPETITION_V23_EN.md  ARTICLE_X_COMPETITION_V24_EN.md  ARTICLE_X_COMPETITION_V28.md  ARTICLE_X_COMPETITION_V3.md  ARTICLE_X_COMPETITION_V30.md  ARTICLE_X_COMPETITION_V31.md  ARTICLE_X_COMPETITION_V33.md  ARTICLE_X_COMPETITION_V34.md  ARTICLE_X_COMPETITION_V5.md  ARTICLE_X_COMPETITION_V7.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile.dashboard  Dockerfile.mcp  HACKATHON.md  HOW_ITS_MADE.md  IDEA.yaml  LICENSE  LICENSING.md  MESSAGE_FOR_MARCO.md  Makefile  (+25 more)
cli/: CHANGELOG.md  README.md  pyproject.toml  setup.py
em-k1-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
em-k1-mcp-server/tests/: conftest.py  test_em_integration.py  test_tools.py
em-plugin-sdk/: README.md  pyproject.toml
em-plugin-sdk/docs/: SDK-STATUS.md
em-plugin-sdk/em_plugin_sdk/: __init__.py  client.py  exceptions.py  fees.py  models.py  networks.py  pagination.py  retry.py
em-plugin-sdk/examples/: fee_calculator.py  quick_start.py  webhook_server.py  worker_agent.py
em-plugin-sdk/tests/: test_client.py  test_evidence.py  test_fees.py  test_h2a.py  test_mock_client.py  test_networks.py  test_payments.py  test_realtime.py  test_reputation.py  test_swarm.py  test_webhooks.py
integrations/crewai/: README.md  __init__.py  em_crew.py  em_tools.py  pyproject.toml  requirements.txt  setup.py  test_imports.py
integrations/langchain/: README.md  __init__.py  em_toolkit.py  em_tools.py  py.typed  pyproject.toml  requirements.txt  setup.py  test_imports.py  verify_structure.py
integrations/openai-agents/: README.md  __init__.py  em_agent.py  em_swarm.py  em_tools.py  pyproject.toml  requirements.txt  setup.py  test_imports.py
mcp_server/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  a2a_test_server.py  admin_auth.py  api.py  conftest.py  logging_config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  server.py  supabase_client.py  test_a2a_server.py
mcp_server/a2a/: __init__.py  agent_card.py  jsonrpc_router.py  models.py  task_manager.py
mcp_server/api/: __init__.py  admin.py  agent_auth.py  auth.py  escrow.py  h2a.py  health.py  middleware.py  openapi.py  party.py  payshell_middleware.py  reputation.py  routes.py  swarm.py  verification_helpers.py
mcp_server/audit/: __init__.py  checkpoint_updater.py  escrow_reconciler.py  lifecycle_validator.py
mcp_server/chat/: __init__.py  event_injector.py  guardrail.py  irc_pool.py  log_service.py  models.py  relay.py
mcp_server/city_ops/: __init__.py  aas_5am_pre_dawn_synthesis_handoff_2026_06_12.py  aas_bounded_local_count_fixture_gate.py  aas_bounded_local_count_pattern_compounder.py  aas_claim_quarantine_admin_route.py  aas_claim_quarantine_board.py  aas_claim_quarantine_prevented_claim_panel.py  aas_claim_quarantine_prevented_claim_trend_read_surface.py  aas_claim_quarantine_prevented_claim_trend_route_handoff_packet.py  aas_claim_quarantine_prevented_claim_trend_summary.py  aas_claim_quarantine_read_surface.py  aas_claim_quarantine_route_panel_handoff_packet.py  aas_compliance_desk_delivery_path_hold_gap_review.py  aas_concept_gap_implementation_roadmap.py  aas_concept_gap_matrix.py  aas_coordination_multiplier_pattern_map.py  aas_coordination_observability_success_metrics_board.py  aas_coordination_observability_success_metrics_read_surface.py  aas_cross_family_approval_state_matrix.py  aas_document_handoff_redaction_delivery_gap_note.py  aas_event_readiness_observation_outline.py  aas_exponential_value_connection_board.py  aas_exponential_value_pathfinder.py  aas_field_asset_visible_state_fixture_outline.py  aas_five_am_pre_dawn_synthesis_handoff.py  aas_four_am_pattern_recognition_multiplier_ladder.py  aas_four_am_pattern_synthesis_handoff.py  aas_incident_verification_observation_uncertainty_maintenance.py  aas_intelligence_flow_compounder.py  aas_local_data_collection_measurement_uncertainty_rubric.py  aas_memory_acontext_readiness_carry_forward_card.py  aas_minimum_ladder_template.py  aas_next_truth_selector.py  aas_no_answer_daytime_operator_prompt_packet.py  aas_no_answer_observability_rubric_fixture.py  aas_operator_answer_intake_packet.py  aas_operator_answer_receipt_gate.py  aas_operator_cockpit_read_surface.py  aas_package_family_hold_selector.py  aas_packaging_pricing_operator_workflow_review_board.py  (+170 more)
mcp_server/config/: __init__.py  platform_config.py
mcp_server/disputes/: __init__.py  evidence.py  manager.py  models.py  resolution.py  router.py  timeline.py
mcp_server/docs/: API.md  ESCROW_AGENT_GUIDE.md  INTEGRATION.md  WEBHOOKS.md
mcp_server/enterprise/: __init__.py  access.py  branding.py  config.py
mcp_server/events/: __init__.py  bus.py  metrics.py  models.py
mcp_server/examples/: __init__.py  agent_publish_task.py  mcp_client.py  worker_complete_task.py
mcp_server/gamification/: __init__.py  progression.py  streaks.py
mcp_server/growth/: __init__.py  referrals.py
mcp_server/health/: __init__.py  checks.py  endpoints.py  metrics.py  monitoring.py
mcp_server/integrations/: __init__.py  _http_retry.py  gas_dust.py  geocoding.py  web3_confirmations.py
mcp_server/jobs/: __init__.py  auto_payment.py  clawkey_sync.py  escalate_bounties.py  fee_sweep.py  phase_b_recovery.py  task_expiration.py
mcp_server/metrics/: __init__.py  prometheus.py
mcp_server/monitoring/: __init__.py  alerts.py  metrics.py
mcp_server/observability/: __init__.py  tracing.py
mcp_server/patches/: advanced_escrow.py
mcp_server/payments/: __init__.py  agent_bond.py  fees.py  multi_token.py  partial_release.py  token_preferences.py
mcp_server/protection/: __init__.py  claims.py  (+4 more)
(+3680 files in other folders)
