[project]
name = "em-k1-mcp-server"
version = "0.1.0"
description = "MCP Server for Booster K1 humanoid robot — Execution Market executor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ultravioleta DAO", email = "dev@ultravioleta.xyz" }
]
keywords = ["mcp", "ai-agents", "humanoid", "booster-k1", "execution-market", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.5.0",
]
# Uncomment when the Booster K1 hardware arrives (3-4 week shipping).
# Install manually from Booster Robotics distribution:
#   pip install booster-robotics-sdk
# hardware = [
#     "booster-robotics-sdk>=0.1.0",
# ]

[project.scripts]
em-k1-mcp = "em_k1_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/em_k1_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",
    "E402",
    "F402",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
