[project]
name = "execution-market"
version = "0.1.0"
description = "Execution Market MCP Server - Human Execution Layer for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ultravioleta DAO", email = "dev@ultravioleta.xyz" }
]
keywords = ["mcp", "ai-agents", "human-execution", "execution-market"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.20.0",  # Requires 1.20+ for streamable HTTP transport
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "starlette>=0.35.0",  # For ASGI mounting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
execution-market = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
