[project]
name = "execution-market"
version = "0.1.0"
description = "Execution Market MCP Server - Universal Execution Layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ultravioleta DAO", email = "dev@ultravioleta.xyz" }
]
keywords = ["mcp", "ai-agents", "universal-execution", "execution-market", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.20.0",  # Requires 1.20+ for streamable HTTP transport
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "starlette>=0.35.0",  # For ASGI mounting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
execution-market = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Use ruff defaults (E4, E7, E9, F) plus explicit ignores
ignore = [
    "E741",  # Ambiguous variable name (l in list comprehensions)
    "E402",  # Module-level import not at top (conditional imports in monitoring)
    "F402",  # Import shadowed by loop variable
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "."

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
