[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-market-langchain"
version = "1.0.0"
description = "LangChain integration for Execution Market - connect AI agents to the physical world"
authors = [
    {name = "Execution Market", email = "support@execution.market"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: LangChain",
]
keywords = ["ai", "agents", "langchain", "execution-market", "physical-world", "tasks", "marketplace"]
dependencies = [
    "langchain-core>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agents = ["langchain>=0.1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://execution.market"
Documentation = "https://execution.market/docs"
Repository = "https://github.com/execution-market/integrations"
Issues = "https://github.com/execution-market/integrations/issues"

[tool.setuptools]
py-modules = ["em_tools", "em_toolkit"]