[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-market-openai-agents"
version = "1.0.0"
description = "OpenAI Agents SDK integration for Execution Market - connect AI agents to the physical world"
authors = [
    {name = "Execution Market", email = "support@execution.market"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: OpenAI",
]
keywords = ["ai", "agents", "openai", "execution-market", "physical-world", "tasks", "marketplace"]
dependencies = [
    "openai-agents>=0.5.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
swarm = ["swarm>=0.5.0"]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://execution.market"
Documentation = "https://execution.market/docs"
Repository = "https://github.com/execution-market/integrations"
Issues = "https://github.com/execution-market/integrations/issues"

[tool.setuptools]
py-modules = ["em_tools", "em_agent", "em_swarm"]