[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execution-market"
version = "0.1.0"
description = "Execution Market SDK - Universal Execution Layer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ultravioleta DAO", email = "hello@ultravioletadao.xyz" }
]
keywords = [
    "ai",
    "agents",
    "execution-market",
    "human-tasks",
    "x402",
    "usdc",
    "web3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://execution.market"
Documentation = "https://docs.execution.market"
Repository = "https://github.com/UltravioletaDAO/execution-market"
Changelog = "https://github.com/UltravioletaDAO/execution-market/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["execution_market"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
